hphp/hack/test/typecheck/explicit_type_collection/explicit_type_collection_arity_mismatch1.php.exp
File "explicit_type_collection_arity_mismatch1.php", line 4, characters 8-10:
Too many arguments (Naming[2038])
